# tesselator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  animation.h  animations.c  animations.cc  ball.cc  ball.h  breakout.h  level.c  main.c  main.cc  math.c  math.cc  math.h  object.cc  object.h  physics.c  player.c  player.cc  player.h  request.h  scratchpad.c  step.c  tile.c  tile.cc  tile.h  ui.c  ui.cc
assets/tilesets/: About.txt
src/: animation.cc  animation.h  ball.cc  ball.h  breakout.h  game.cc  game.h  gfx.cc  gfx.h  level.cc  level.h  main.cc  math.cc  math.h  object.cc  object.h  particles.cc  particles.h  player.cc  player.h  scratchpad.cc  tile.cc  tile.h  ui.cc  ui.h
